# python-criptomonedas

./: README.md  pyproject.toml  requirements.txt
criptomonedas_dash/: Kraken_BTCEUR_minute.csv  Kraken_ETHEUR_minute.csv  Kraken_XBTEUR_minute.csv  app.py
tests/: test_aguacates_dash.py  test_criptomonedas_dash.py
