[tool.poetry]
name = "aguacates_dash"
version = "0.1.0"
description = ""
authors = ["internetmosquito <alejandrovillamarin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


